WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305210
[Win] GLDisplay isMainThread() assert fails on Windows
https://bugs.webkit.org/show_bug.cgi?id=305210
Summary
[Win] GLDisplay isMainThread() assert fails on Windows
Ian Grunert
Reported
2026-01-09 09:44:58 PST
Skip this assert on Windows for now
Attachments
Add attachment
proposed patch, testcase, etc.
Ian Grunert
Comment 1
2026-01-09 09:47:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56348
EWS
Comment 2
2026-01-12 09:51:52 PST
Committed
305474@main
(cae4cdab5a09): <
https://commits.webkit.org/305474@main
> Reviewed commits have been landed. Closing PR #56348 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-12 09:52:13 PST
<
rdar://problem/167997804
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug