[Win] GLDisplay isMainThread() assert fails on Windows https://bugs.webkit.org/show_bug.cgi?id=305210

Reviewed by Fujii Hironori.

Skip this assert for now, this fails on the GPUProcess.

Canonical link: https://commits.webkit.org/305474@main